RESOLVED FIXED143531
[Curl] Compile error in CurlCacheEntry::parseResponseHeaders method.
https://bugs.webkit.org/show_bug.cgi?id=143531
Summary [Curl] Compile error in CurlCacheEntry::parseResponseHeaders method.
peavo
Reported 2015-04-08 12:46:27 PDT
Cache related methods in ResourceResponse have changed return type.
Attachments
Patch (3.92 KB, patch)
2015-04-08 12:49 PDT, peavo
no flags
peavo
Comment 1 2015-04-08 12:49:12 PDT
Alex Christensen
Comment 2 2015-04-08 14:33:26 PDT
WebKit Commit Bot
Comment 3 2015-04-08 15:22:25 PDT
Comment on attachment 250375 [details] Patch Clearing flags on attachment: 250375 Committed r182571: <http://trac.webkit.org/changeset/182571>
WebKit Commit Bot
Comment 4 2015-04-08 15:22:29 PDT
All reviewed patches have been landed. Closing bug.
Sungmann Cho
Comment 5 2015-04-09 21:34:34 PDT
*** Bug 143522 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.