[Curl] Compile error in CurlCacheEntry::parseResponseHeaders method. https://bugs.webkit.org/show_bug.cgi?id=143531

Reviewed by Alex Christensen.

Cache related methods in ResourceResponse have changed return type.

* platform/network/curl/CurlCacheEntry.cpp:
(WebCore::CurlCacheEntry::parseResponseHeaders):


Canonical link: https://commits.webkit.org/161569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182571 268f45cc-cd09-0410-ab3c-d52691b4dbfc